--- a/journal/templates/journal/journal_view.html
+++ b/journal/templates/journal/journal_view.html
@@ -1,18 +1,23 @@
-% extends 'journal/base.html' %}
+{% extends 'journal/base.html' %}
 
 {% block content %}
 
 <div class="container">
     <h1>Journal</h1>
     <table class="table">
-        <tr>
-            <th scope='Entry'></th>
-        </tr>
+        <thead>
+            <tr>
+                <th scope='col'>Entry</th>
+            </tr>            
+        </thead>
+        <tbody>
+            {% for entry in entries %}
+            <tr>
+                <td><a href="/entry/{{ entry.id}}">{{ entry.date }}</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
-    <tbody>
-        {% for entry in entries %}
-        <tr>
-            <td>{{ entry.created_date</td>
-        </tr>
-    </tbody>
 </div>
+
+{% endblock %}
